<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="button_send">Send</string>
    <string name="app_name">SecApp</string>
    <string name="connected">Users: </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="toast_set_name">You have not set a name. Please set one!</string>

    // preferences

    <string name="pref_name">Set Name</string>
    <string name="pref_name_summ">Name that is being displayed when sending messages</string>
    <string name="pref_url">Set Server URL</string>
    <string name="pref_url_summ">Set the SecServer to connect to</string>

    <string name="pref_enable_noti">Enable notifications</string>
    <string name="pref_enable_noti_summ">Completely enable or disable all notifications</string>
    <string name="pref_noti_msg">Normal messages</string>
    <string name="pref_noti_msg_summ">How you will be notified of new messages</string>
    <string name="pref_noti_direct">Direct messages</string>
    <string name="pref_noti_direct_summ">How you will be notified of new direct messages</string>
    <string name="pref_noti_all">\u0040all messages</string>
    <string name="pref_noti_all_summ">How you will be notified of new broadcast messages</string>
    <string name="pref_noti_mention">Mentioned in messages</string>
    <string name="pref_noti_mention_summ">How you will be notified when you are mentioned in a message</string>

    <string name="pref_cat_custom">Customization</string>
    <string name="pref_cat_advanced">Advanced Settings</string>
    <string name="pref_cat_noti">Notification Settings</string>

    <string name="title_activity_settings">Settings</string>

</resources>
